...
  "welcome_message": "Welcome {email}",
  "enter_your_email_address": "Enter your email address",
  "enter_your_account_password": "Enter your account password",
  "email": "Email",
  "password": "Password",
  "this_field_required": "This field is required",
  "unlock": "Unlock",
  "save": "Save",
  "saveVault": "Save Vault",
  "lock": "Lock",
  "otp": "OTP",
  "showing_all_entries": "Showing all entries",
  "unexpected_error": "Unexpected error. Sorry! Please let us know, then close and restart the app. Details: {error}",
...
  "manageAccount": "Manage account",
  "emailValidationFail": "Not a valid email address. Please try again.",
  "biometricSignIn": "Enable Quick sign-in (biometrics)",
  "enableAutofillRequired": "You must change your device's Autofill provider to {appName}.",
  "autofillEnabled": "Kee Vault is correctly set as your device's Autofill provider.",
  "autofillRequiresQU": " You need to add a Passcode, FaceId or TouchId to your device too!",
  "enableAutofill": "Enable Autofill",
  "enableAutofillIosInstructions": "1. Please switch to your device's Settings app and load the \"Passwords\" section.\n\n2. Click on \"AutoFill passwords\".\n\n3. Ensure the switch at the top is enabled.\n\n4. Deselect Keychain (or other selected items) and then select \"{appName}\".\n\nThen switch back to this Kee Vault App and click \"OK\" to confirm that you are finished.\n\nFinally, double ch
  "useWebAppForOtherSettings": "You can change some additional settings from the Kee Vault web app by using your web browser to sign in to Kee Vault.",
  "openWebApp": "Open Kee Vault in your browser",
  "manageAccountSettingsDetail": "Edit your subscription, payment details or email contact preferences from the Kee Vault Account website.",
  "deviceAutoFill": "Device AutoFill",
  "quickSignIn": "Quick sign-in",
...
  "notes": "Notes",
  "website": "Website",
  "searchHistory": "Include entry history",
  "colors": "Colours",
  "filteredByCriteria": "Filtered by {criteria}",
  "chooseAnIcon": "Choose an icon",
  "generateSinglePassword": "Generate single password",
  "vaultStatusActionNeeded": "Action needed",
  "vaultStatusUploading": "Uploading",
  "vaultStatusSaving": "Saving",
  "vaultStatusRefreshing": "Refreshing",
  "vaultStatusError": "Error",
  "vaultStatusSaveNeeded": "Save needed",
...
  "user": "user",
  "userEmail": "User/Email",
  "group": "group",
  "saveChanges": "Confirm changes",
  "discardChanges": "Discard changes",
  "help": "Help",
  "settings": "Settings",
  "menuTrash": "Bin",
  "menuSetGeneral": "General",
  "menuEmptyTrash": "Empty Bin",
  "menuEmptyTrashAlert": "Empty Bin?",
  "menuEmptyTrashAlertBody": "You will not be able to get the entries back",
  "alertYes": "Yes",
  "alertNo": "No",
  "alertOk": "OK",
  "alertCancel": "Cancel",
  "alertCopy": "Copy",
  "alertClose": "Close",
  "footerTitleGen": "Generate",
  "genLen": "Length",
  "genPresetPronounceable": "Pronounceable",
...
